# oasis-core

./: .codecov.yml  .deepsource.toml  .dockerignore  .gitbook.yaml  .gitignore  .gitlint  .gitpod.yml  .goreleaser.yml  .markdownlint.yml  .nancy-ignore  .punch_config.py  .punch_version.py  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  Makefile  Makefile.toml  README.md  SECURITY.md  audit.toml  codecov.yml  common.mk  package-lock.json  rust-toolchain  rust-toolchain.toml  towncrier.toml
beacon/api/: Cargo.toml  build.rs
beacon/api/src/: beacon.proto  lib.rs
beacon/base/: Cargo.toml
beacon/base/src/: backend.rs  lib.rs  service.rs
beacon/dummy/: Cargo.toml
beacon/dummy/src/: backend.rs  lib.rs
beacon/ethereum/: Cargo.toml
beacon/ethereum/contracts/: RandomBeacon.sol
beacon/ethereum/migrations/: 2_deploy_contracts.js
beacon/ethereum/src/: backend.rs  lib.rs
beacon/ethereum/tests/: beacon.rs  truffle.rs
client/: Cargo.toml  build.rs
client/src/: grpc.rs  lib.rs  node.rs
client/src/enclave_rpc/: client.rs  mod.rs  transport.rs
client/src/rpc/: client.rs  macros.rs  mod.rs  transport.rs
client/src/transaction/: block_watcher.rs  client.rs  macros.rs  mod.rs  snapshot.rs  types.rs
clients/benchmark/: Cargo.toml
clients/benchmark/src/: main.rs
clients/test-db-encryption/: Cargo.toml
clients/token/: Cargo.toml
clients/token/src/: main.rs
clients/utils/: Cargo.toml
clients/utils/src/: benchmark.rs  callwait.rs  components.rs  db.rs  lib.rs  macros.rs
common/: Cargo.toml
common/api/: Cargo.toml  build.rs
common/api/src/: common.proto  lib.rs
common/src/: address.rs  block.rs  bytes.rs  contract.rs  drbg.rs  entity.rs  environment.rs  epochtime.rs  epochtimeservice.rs  error.rs  futures.rs  hash.rs  header.rs  hex_encoded.rs  identity.rs  lib.rs  macros.rs  node.rs  node_group.rs  profiling.rs  protobuf.rs  random.rs  remote_node.rs  runtime.rs  serializer.rs  signature.rs  streamfollow.rs  subscribers.rs  testing.rs  uint.rs  usize_iterable_hashmap.rs  usize_iterable_hashset.rs  x509.rs
common/src/epochtime/: grpc.rs  local.rs  mod.rs
common/src/futures/: block_on.rs  mod.rs  (+5 more)
common/testdata/: hmac_drbg.json
common/tests/: usize_iterable_hashset.rs
compute/: Cargo.toml
compute/api/: Cargo.toml  build.rs
compute/src/: consensus.rs  environment.rs  group.rs  handlers.rs  ias.rs  instrumentation.rs  main.rs  node.rs  roothash.rs  server.rs  statetransfer.rs  worker.rs
consensus/: Cargo.toml  build.rs
consensus/api/: Cargo.toml  build.rs
consensus/base/: Cargo.toml
consensus/benches/: benchmarks.rs
consensus/client/: Cargo.toml
consensus/dummy/: Cargo.toml
consensus/frontend/: Cargo.toml
consensus/optimistic/: Cargo.toml
consensus/solidity/: consensus.sol
consensus/src/: ekidenmint.rs  errors.rs  lib.rs  main.rs  rpc.rs  state.rs  tendermint.proto  tendermint.rs
consensus/tests/: integration_test.rs
di/: Cargo.toml
di/src/: di.rs  lib.rs  macros.rs
epochtime/: Cargo.toml
epochtime/src/: grpc.rs  interface.rs  lib.rs  local.rs
ethereum/: Cargo.toml  build.rs  package-lock.json  package.json  truffle.js
ethereum/contracts/: Consensus.sol  ContractDeployer.sol  ContractRegistry.sol  DisputeResolution.sol  ERC20Interface.sol  EntityRegistry.sol  EpochABI.sol  MockEpoch.sol  OasisEpoch.sol  RandomBeacon.sol  RandomBeaconDeployer.sol  Stake.sol  UintSet.sol
ethereum/migrations/: 2_deploy_contracts.js
ethereum/src/: beacon.rs  consensus.rs  contract_registry.rs  development-addresses.txt  dispute_resolution.rs  entity_di.rs  entity_registry.rs  identity.rs  lib.rs  mockepoch.rs  signature.rs  stake.rs  truffle.rs  web3_di.rs
ethereum/test/: beacon.js  consensus.js  contract_registry.js  dispute_resolution.js  entity_registry.js  mock_epoch.js  oasis_epoch.js  stake.js  web3.js
ethereum/tests/: beacon.rs  contract_registry.rs  entity_registry.rs  mocktime.rs  signature.rs  stake.rs  truffle.rs
ethereum/util/: keyconversion.js
instrumentation/: Cargo.toml
instrumentation/prometheus/: Cargo.toml
instrumentation/src/: lib.rs  macros.rs  timer.rs
keymanager/: Cargo.toml
keymanager-api-common/: Cargo.toml
keymanager-api-common/src/: api.rs  lib.rs
keymanager-client/: Cargo.toml
keymanager-client/src/: client.rs  lib.rs  mock.rs
keymanager-lib/: Cargo.toml
keymanager-lib/src/: context.rs  kdf.rs  keymanager.rs  lib.rs  methods.rs  policy.rs
keymanager-runtime/: Cargo.toml
keymanager-runtime/api/: Cargo.toml
keymanager-runtime/src/: context.rs  kdf.rs  key_store.rs  main.rs  methods.rs  policy.rs
keymanager/src/: lib.rs
runtime/: Cargo.toml  THREADS.md  build.rs
runtime-crypto/: Cargo.toml
runtime-crypto/src/: hash.rs  lib.rs  signature.rs
runtime-loader/: Cargo.toml
runtime-loader/src/: elf.rs  lib.rs  proxy.rs  sgxs.rs
runtime/client/: Cargo.toml  build.rs
runtime/common/: Cargo.toml
runtime/edl/: Cargo.toml
runtime/fuzz/: mkvs_node.rs  mkvs_proof.rs  sgx_pcs_quote.rs
runtime/src/: app.rs  attestation.rs  cache.rs  config.rs  dispatcher.rs  executor.rs  future.rs  host.rs  identity.rs  init.rs  lib.rs  macros.rs  policy.rs  protocol.rs  rak.rs  rofl.rs  tracing.rs  types.rs
runtime/testdata/: avr_signature_group_out_of_date.sig  pcs_quote_bundle.cbor  qe_identity_v2.json  qe_identity_v2_tdx.json  qe_identity_v2_tdx2.json  tcb_info_v2_fmspc_00606A000000.json  tcb_info_v3_fmspc_00606A000000.json  tcb_info_v3_tdx_fmspc_50806F000000.json  tcb_info_v3_tdx_fmspc_C0806F000000.json
runtime/trusted/: Cargo.toml
runtime/untrusted/: Cargo.toml  build.rs
secret-sharing/: Cargo.toml
secret-sharing/src/: lib.rs
tendermint/: Cargo.toml  build.rs
tendermint/src/: client.rs  lib.rs
tools/: Cargo.toml  build.rs
tools/src/: cargo.rs  command_buildcontract.rs  command_buildenclave.rs  command_shell.rs  contract.rs  enclave.rs  error.rs  lib.rs  sgxs.rs  truffle.rs  utils.rs
tracing/: Cargo.toml
tracing/src/: lib.rs
worker/: Cargo.toml  build.rs
worker/api/: Cargo.toml
worker/src/: lib.rs  protocol.rs  worker.rs
(+5448 files in other folders)
