[workspace]
members = [
    "runtime",
    "runtime-loader",
    "keymanager-client",
    "keymanager-api-common",
    "keymanager-lib",
    "tools",

    # Test runtimes.
    "tests/runtimes/simple-keyvalue",
    "tests/runtimes/simple-keymanager",
]
resolver = "2"

[profile.release]
panic = "abort"
