[workspace]
members = [
    "runtime",
    "runtime-loader",
    "keymanager",
    "secret-sharing",
    "tools",

    # Test runtimes.
    "tests/runtimes/simple-keyvalue",
    "tests/runtimes/simple-keymanager",
    "tests/runtimes/simple-rofl",
]
exclude = [
    # Example TDX runtime.
    "tests/runtimes/simple-rofl-tdx",
]
resolver = "2"

[profile.release]
panic = "abort"
