[package]
name = "oasis-core-client"
version = "0.3.0-alpha"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
edition = "2018"

[dependencies]
oasis-core-runtime = { path = "../runtime" }
serde = { version = "1.0.126", features = ["derive"] }
serde_bytes = "0.11.5"
serde_cbor = "0.11.1"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3.15"
tokio = { version = "1", features = ["rt", "sync"] }
io-context = "0.2.0"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
grpcio = "0.9.0"
rustracing = "0.5.1"
rustracing_jaeger = "0.6.1"
tokio-stream = { version = "0.1.6", features = ["sync"] }
