[package]
name = "oasis-core-client"
version = "0.0.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2018"

[dependencies]
oasis-core-runtime = { path = "../runtime" }
serde = { version = "1.0.126", features = ["derive"] }
serde_bytes = "0.11.5"
serde_cbor = "0.11.1"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3.15"
tokio = { version = "1", features = ["rt", "sync"] }
io-context = "0.2.0"
