[package]
name = "oasis-core-client"
version = "0.0.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2018"

[dependencies]
oasis-core-runtime = { path = "../runtime" }
cbor = { version = "0.1.0", package = "oasis-cbor" }

# Third party.
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3.15"
tokio = { version = "1", features = ["rt", "sync"] }
io-context = "0.2.0"
