[package]
name = "ekiden-common"
version = "0.2.0-alpha"
authors = ["Ekiden Developers <ekiden-dev@googlegroups.com>"]
description = "Ekiden common functionality (available to both trusted and untrusted parts)"
keywords = ["ekiden"]
repository = "https://github.com/ekiden/ekiden"

[features]
default = []
profiling = []

[dependencies]
ekiden-common-api = { path = "./api", version = "0.2.0-alpha" }
ekiden-di = { path = "../di", version = "0.2.0-alpha" }
protobuf = "~1.4"
byteorder = "1.2.1"
rustc-hex = "1.0"
ring = { git = "https://github.com/ekiden/ring", default-features = false, features = [ "rsa_signing" ], branch = "0.12.1-ekiden" }
untrusted = "0.5.1"
bigint = { version = "4", features = ["std"] }
chrono = "0.4.2"
# We cannot use serde>=1.0.60 as it requires rustc 1.26+.
serde = "=1.0.59"
serde_derive = "1.0"
serde_cbor = "0.8.2"
serde_bytes = "~0.10"
log = "0.4"

[target.'cfg(target_env = "sgx")'.dependencies]
futures-sgx = { git = "https://github.com/ekiden/futures-rs" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
rand = "0.4.2"
grpcio = "0.2.2"
futures = "0.1"
futures-cpupool = "0.1"
get_if_addrs = "~0.5.1"
env_logger = "0.5.10"
pretty_env_logger = "0.2"
clap = "2.29.1"

[dev-dependencies]
serde_json = { git = "https://github.com/ekiden/json" }
