[package]
name = "ekiden-compute"
version = "0.1.0-alpha.4"
authors = ["Ekiden Developers <ekiden-dev@googlegroups.com>"]
description = "Ekiden compute node"
keywords = ["ekiden"]
repository = "https://github.com/ekiden/ekiden"
build = "build.rs"

[dependencies]
cargo-cult = "0.1.0"
ekiden-core = { path = "../core/common", version = "0.1.0-alpha.4" }
ekiden-untrusted = { path = "../core/untrusted", version = "0.1.0-alpha.4" }
ekiden-rpc-client = { path = "../rpc/client", version = "0.1.0-alpha.4" }
ekiden-compute-api = { path = "./api", version = "0.1.0-alpha.4" }
ekiden-consensus-base = { path = "../consensus/base", version = "0.1.0-alpha.4" }
ekiden-consensus-dummy = { path = "../consensus/dummy", version = "0.1.0-alpha.4" }
ekiden-storage-base = { path = "../storage/base", version = "0.1.0-alpha.4" }
ekiden-storage-dummy = { path = "../storage/dummy", version = "0.1.0-alpha.4" }
ekiden-scheduler-base = { path = "../scheduler/base", version = "0.1.0-alpha.4" }
ekiden-scheduler-dummy = { path = "../scheduler/dummy", version = "0.1.0-alpha.4" }
ekiden-beacon-dummy = { path = "../beacon/dummy", version = "0.1.0-alpha.4" }
ekiden-registry-base = { path = "../registry/base", version = "0.1.0-alpha.4" }
ekiden-registry-dummy = { path = "../registry/dummy", version = "0.1.0-alpha.4" }
protobuf = "~1.4"
sgx_types = { git = "https://github.com/ekiden/rust-sgx-sdk", tag = "v0.9.8-ekiden1" }
thread_local = "0.3.5"
clap = "2.29.1"
reqwest = "0.8.2"
base64 = "0.9.0"
prometheus = "0.3.10"
hyper = "0.11"
tokio-core = "0.1"
grpcio = "0.2.2"
lru-cache = "0.1.1"
log = "0.4"
pretty_env_logger = "0.2"
futures-timer = "0.1.1"

[build-dependencies]
ekiden-tools = { path = "../tools", version = "0.1.0-alpha.4" }
ekiden-edl = { path = "../core/edl", version = "0.1.0-alpha.4" }
