[package]
name = "ekiden-compute"
version = "0.2.0-alpha"
authors = ["Ekiden Developers <ekiden-dev@googlegroups.com>"]
description = "Ekiden compute node"
keywords = ["ekiden"]
repository = "https://github.com/ekiden/ekiden"
build = "build.rs"

[dependencies]
ekiden-core = { path = "../core/common", version = "0.2.0-alpha" }
ekiden-di = { path = "../di", version = "0.2.0-alpha" }
ekiden-epochtime = { path = "../epochtime", version = "0.2.0-alpha" }
ekiden-instrumentation = { path = "../instrumentation", version = "0.2.0-alpha" }
ekiden-instrumentation-prometheus = { path = "../instrumentation/prometheus", version = "0.2.0-alpha" }
ekiden-untrusted = { path = "../core/untrusted", version = "0.2.0-alpha" }
ekiden-rpc-client = { path = "../rpc/client", version = "0.2.0-alpha" }
ekiden-compute-api = { path = "./api", version = "0.2.0-alpha" }
ekiden-consensus-base = { path = "../consensus/base", version = "0.2.0-alpha" }
ekiden-consensus-client = { path = "../consensus/client", version = "0.2.0-alpha" }
ekiden-consensus-dummy = { path = "../consensus/dummy", version = "0.2.0-alpha" }
ekiden-storage-base = { path = "../storage/base", version = "0.2.0-alpha" }
ekiden-storage-batch = { path = "../storage/batch", version = "0.2.0-alpha" }
ekiden-storage-frontend = { path = "../storage/frontend", version = "0.2.0-alpha" }
ekiden-storage-multilayer = { path = "../storage/multilayer", version = "0.2.0-alpha" }
ekiden-scheduler-base = { path = "../scheduler/base", version = "0.2.0-alpha" }
ekiden-scheduler-client = { path = "../scheduler/client", version = "0.2.0-alpha" }
ekiden-beacon-base = { path = "../beacon/base", version = "0.2.0-alpha" }
ekiden-beacon-dummy = { path = "../beacon/dummy", version = "0.2.0-alpha" }
ekiden-registry-base = { path = "../registry/base", version = "0.2.0-alpha" }
ekiden-registry-client = { path = "../registry/client", version = "0.2.0-alpha" }
ekiden-ethereum = { path = "../ethereum", version = "0.2.0-alpha" }
ekiden-tendermint = { path = "../tendermint", version = "0.2.0-alpha" }
ekiden-tools = { path = "../tools", version = "0.2.0-alpha" }
protobuf = "~2.0"
sgx_types = { git = "https://github.com/ekiden/rust-sgx-sdk", tag = "v0.9.8-ekiden1" }
thread_local = "0.3.5"
clap = "2.29.1"
reqwest = "0.8.2"
base64 = "0.9.0"
tokio-core = "0.1"
grpcio = { git = "https://github.com/ekiden/grpc-rs", tag = "v0.3.0-ekiden2", features = ["openssl"] }
lru-cache = "0.1.1"
log = "0.4"
pretty_env_logger = "0.2"
serde_cbor = "0.8.2"

[build-dependencies]
ekiden-tools = { path = "../tools", version = "0.2.0-alpha" }
ekiden-edl = { path = "../core/edl", version = "0.2.0-alpha" }
