[package]
name = "ekiden-consensus"
version = "0.1.0-alpha.1"
authors = ["Ekiden Developers <ekiden-dev@googlegroups.com>"]
description = "Ekiden consensus node"
keywords = ["ekiden"]
repository = "https://github.com/ekiden/ekiden"
build = "build.rs"

[dependencies]
ekiden-consensus-api = { path = "./api", version = "0.1.0-alpha.1" }
abci = { git = "https://github.com/ekiden/tendermint-abci" }
clap = "2.29.1"
futures = "0.1"
grpc = "0.2.1"
hex = "0.3.1"
hyper = "0.11"
protobuf = "1.4.2"
tls-api = "0.1.12"
tokio-core = "0.1"
tokio-proto = "0.1"

[build-dependencies]
ekiden-tools = { path = "../tools", version = "0.1.0-alpha.1" }
protoc-rust = "1.4"
protoc-rust-grpc = "0.2.1"

[target.'cfg(not(target_env = "sgx"))'.build-dependencies]
rand = "0.4.2"

[lib]
path = "src/lib.rs"

[[bin]]
name = "ekiden-consensus"
path = "src/main.rs"
