[package]
name = "ekiden-consensus"
version = "0.1.0-alpha.3"
authors = ["Ekiden Developers <ekiden-dev@googlegroups.com>"]
description = "Ekiden consensus node"
keywords = ["ekiden"]
repository = "https://github.com/ekiden/ekiden"
build = "build.rs"

[dependencies]
ekiden-core = { path = "../core/common", version = "0.1.0-alpha.3" }
ekiden-consensus-api = { path = "./api", version = "0.1.0-alpha.3" }
abci = { git = "https://github.com/ekiden/tendermint-abci" }
clap = "2.29.1"
futures = "0.1"
hex = "0.3.1"
protobuf = "1.4.2"
tokio-proto = "0.1"
grpcio = "0.2.2"

[build-dependencies]
ekiden-tools = { path = "../tools", version = "0.1.0-alpha.3" }
protoc-grpcio = "0.1.0"

[target.'cfg(not(target_env = "sgx"))'.build-dependencies]
rand = "0.4.2"

[lib]
path = "src/lib.rs"

[[bin]]
name = "ekiden-consensus"
path = "src/main.rs"
