[package]
name = "ekiden-epochtime"
version = "0.2.0-alpha"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
description = "Ekiden Time Synchronization"
keywords = ["ekiden"]
repository = "https://github.com/oasislabs/ekiden"

[dependencies]
ekiden-common-api = { path = "../common/api", version = "0.2.0-alpha" }
ekiden-common = { path = "../common", version = "0.2.0-alpha" }
ekiden-di = { path = "../di", version = "0.2.0-alpha" }
chrono = "0.4.2"
clap = "2.29.1"
futures-timer = "0.1.1"
grpcio = { git = "https://github.com/ekiden/grpc-rs", tag = "v0.3.0-ekiden2", features = ["openssl"] }
log = "0.4"
