[package]
name = "ekiden-epochtime"
version = "0.2.0-alpha"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
description = "Ekiden Time Synchronization"
keywords = ["ekiden"]
repository = "https://github.com/oasislabs/ekiden"

[dependencies]
ekiden-common = { path = "../common", version = "0.2.0-alpha" }
chrono = "0.4.2"
