[package]
name = "ekiden-ethereum"
version = "0.2.0-alpha"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
description = "Ekiden Ethereum backend components"
keywords = ["ekiden"]
repository = "https://github.com/oasislabs/ekiden"
build = "build.rs"

[dependencies]
chrono = "0.4.2"
clap = "2.29.1"
ekiden-common = { path = "../common", version = "0.2.0-alpha" }
ekiden-beacon-base = { path = "../beacon/base", version = "0.2.0-alpha" }
ekiden-di = { path = "../di", version = "0.2.0-alpha" }
ethabi = "5.1"
log = "0.4"
rustc-hex = "1.0.0"
serde_json = "1.0"
web3 = { git = "https://github.com/ekiden/rust-web3" }

[dev-dependencies]
scopeguard = "0.3.3"
