[package]
name = "ekiden-ethereum"
version = "0.2.0-alpha"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
description = "Ekiden Ethereum backend components"
keywords = ["ekiden"]
repository = "https://github.com/oasislabs/ekiden"
build = "build.rs"

[dependencies]
ansi_term = "0.11"
chrono = "0.4.2"
clap = "2.29.1"
constant_time_eq = "0.1.2"
ekiden-beacon-base = { path = "../beacon/base", version = "0.2.0-alpha" }
ekiden-common = { path = "../common", version = "0.2.0-alpha" }
ekiden-consensus-base = { path = "../consensus/base", version = "0.2.0-alpha" }
ekiden-epochtime = { path = "../epochtime", version = "0.2.0-alpha" }
ekiden-instrumentation-prometheus = { path = "../instrumentation/prometheus", version = "0.2.0-alpha" }
ekiden-registry-base = { path = "../registry/base", version = "0.2.0-alpha" }
ekiden-registry-dummy = { path = "../registry/dummy", version = "0.2.0-alpha" }
ekiden-scheduler-base = { path = "../scheduler/base", version = "0.2.0-alpha" }
ekiden-storage-base = { path = "../storage/base", version = "0.2.0-alpha" }
ekiden-di = { path = "../di", version = "0.2.0-alpha" }
ethabi = "5.1"
grpcio = { git = "https://github.com/ekiden/grpc-rs", tag = "v0.3.0-ekiden2", features = ["openssl"] }
log = "0.4"
rustc-hex = "1.0.0"
secp256k1-plus = { git = "https://github.com/ekiden/rust-secp256k1", branch = "feature/rand_optional"}
serde = "1.0"
serde_derive = "1.0"
serde_cbor = "0.8.2"
serde_json = "1.0"
tiny-keccak = "1.4.2"
tokio-core = "0.1.17"
web3 = { git = "https://github.com/ekiden/rust-web3", branch = "0.3.0-ekiden" }

[dev-dependencies]
ekiden-storage-dummy = { path = "../storage/dummy", version = "0.2.0-alpha" }
scopeguard = "0.3.3"

[[bin]]
name = "ekiden-mockepoch-controller"
path = "src/bin/mockepoch_controller.rs"
