[package]
name = "ekiden-instrumentation"
version = "0.2.0-alpha"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
description = "A lightweight instrumentation facade for Rust"
keywords = ["ekiden"]
repository = "https://github.com/oasislabs/ekiden"

[dependencies]
# (pinning transitive dependency) backtrace-sys 0.1.24 compatible with backtrace 0.3.9
backtrace-sys = "=0.1.24"
# (pinning transitive dependency) backtrace 0.3.10 incompatible with failure 0.1
backtrace = "=0.3.9"
failure = "0.1"
