[package]
name = "oasis-core-keymanager-api-common"
version = "0.3.0-alpha"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
edition = "2018"

[dependencies]
oasis-core-runtime = { path = "../runtime" }

base64 = "0.13.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_bytes = "0.11.5"
rustc-hex = "2.0.1"
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.3.0"
x25519-dalek = "1.1.0"
rand = "0.8.1"
