[package]
name = "oasis-core-keymanager-api-common"
version = "0.0.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2018"

[dependencies]
oasis-core-runtime = { path = "../runtime" }
cbor = { version = "0.2.1", package = "oasis-cbor" }

base64 = "0.13.0"
rustc-hex = "2.0.1"
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.3.0"
x25519-dalek = "1.1.0"
rand = "0.8.4"
zeroize = "1.4.2"
