[package]
name = "oasis-core-keymanager-client"
version = "0.3.0-alpha"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
edition = "2018"

[dependencies]
oasis-core-client = { path = "../client" }
oasis-core-runtime = { path = "../runtime" }
oasis-core-keymanager-api-common = { path = "../keymanager-api-common" }
futures = "0.3.15"
io-context = "0.2.0"
lru = "0.6.5"
thiserror = "1.0"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
grpcio = "0.8.2"
