[package]
name = "oasis-core-keymanager-client"
version = "0.0.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2018"

[dependencies]
oasis-core-client = { path = "../client" }
oasis-core-runtime = { path = "../runtime" }
oasis-core-keymanager-api-common = { path = "../keymanager-api-common" }
cbor = { version = "0.1.0", package = "oasis-cbor" }

# Third party.
futures = "0.3.15"
io-context = "0.2.0"
lru = "0.6.5"
thiserror = "1.0"
