[package]
name = "oasis-core-keymanager-lib"
version = "0.0.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2018"

[dependencies]
oasis-core-runtime = { path = "../runtime" }
oasis-core-keymanager-api-common = { path = "../keymanager-api-common" }
oasis-core-keymanager-client = { path = "../keymanager-client" }
cbor = { version = "0.1.0", package = "oasis-cbor" }

# Third party.
anyhow = "1.0"
lazy_static = "1.3.0"
lru = "0.6.5"
io-context = "0.2.0"
rand = "0.7.3"
sgx-isa = { version = "0.3.3", features = ["sgxstd"] }
sp800-185 = "0.2.0"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
x25519-dalek = "1.1.0"
zeroize = "1.4"
