[package]
name = "oasis-core-keymanager-runtime"
version = "0.3.0-alpha"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
edition = "2018"

[package.metadata.fortanix-sgx]
heap-size = 134217728
stack-size = 2097152
threads = 2

[dependencies]
oasis-core-runtime = { path = "../runtime" }
oasis-core-keymanager-api = { path = "./api" }
oasis-core-keymanager-lib = { path = "../keymanager-lib" }
failure = "0.1.5"
lazy_static = "1.3.0"
