[package]
name = "oasis-core-keymanager"
version = "0.0.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2018"

[dependencies]
oasis-core-runtime = { path = "../runtime" }
cbor = { version = "0.5.1", package = "oasis-cbor" }

# Third party.
anyhow = "1.0"
base64 = "0.13.0"
futures = "0.3.17"
io-context = "0.2.0"
lazy_static = "1.3.0"
lru = "0.8.0"
rand = "0.7.3"
rustc-hex = "2.0.1"
sgx-isa = { version = "0.4.0", features = ["sgxstd"] }
sp800-185 = "0.2.0"
thiserror = "1.0"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
x25519-dalek = "1.1.0"
tokio = { version = "~1.24.1", features = ["rt"] }
zeroize = "1.4.2"
