[package]
name = "oasis-core-keymanager"
version = "0.0.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2018"

[dependencies]
oasis-core-runtime = { path = "../runtime" }
cbor = { version = "0.5.1", package = "oasis-cbor" }

# Third party.
anyhow = "1.0"
base64 = "0.21.7"
futures = "0.3.25"
lazy_static = "1.3.0"
lru = "0.9.0"
rand = "0.8.5"
rustc-hex = "2.0.1"
sgx-isa = { version = "0.4.0", features = ["sgxstd"] }
sp800-185 = "0.2.0"
thiserror = "1.0"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
tokio = { version = "1.29.1", features = ["rt"] }
zeroize = "1.6"
async-trait = "0.1.66"
