[package]
name = "oasis-core-keymanager"
version = "0.0.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2018"

[dependencies]
oasis-core-runtime = { path = "../runtime" }
secret-sharing = { path = "../secret-sharing" }
cbor = { version = "0.5.1", package = "oasis-cbor" }

# Third party.
anyhow = "1.0"
base64 = "0.22.1"
futures = "0.3.25"
group = "0.13.0"
lazy_static = "1.5.0"
lru = "0.12.3"
rand = "0.8.5"
rustc-hex = "2.0.1"
sgx-isa = { version = "0.4.0", features = ["sgxstd"] }
sp800-185 = "0.2.0"
thiserror = "1.0"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
tokio = { version = "1.38", features = ["rt"] }
zeroize = "1.8"
async-trait = "0.1.81"
p384 = { version = "0.13.0" }
p256 = { version = "0.13.2" }

[features]
debug-mock-sgx = ["oasis-core-runtime/debug-mock-sgx"]
