[package]
name = "oasis-core-runtime-loader"
version = "0.0.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2018"

[dependencies]
clap = "4.5.28"
anyhow = "1.0"
futures = { version = "0.3.31", features = ["compat", "io-compat"] }
tokio = { version = "1.43", features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
aesm-client = { version = "0.6.0", features = ["sgxs"] }
enclave-runner = { version = "0.6.0" }
sgxs-loaders = { version = "0.4.0" }

[[bin]]
name = "oasis-core-runtime-loader"
path = "bin/main.rs"
