[package]
name = "oasis-core-runtime-loader"
version = "0.0.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2018"

[dependencies]
clap = "4.5.37"
anyhow = "1.0"
futures = { version = "0.3.31", features = ["compat", "io-compat"] }
tokio = { version = "1.45", features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
# TODO: Change back to released version once upstream fix released.
aesm-client = { git = "https://github.com/fortanix/rust-sgx", branch = "raoul/rte-418-fix_enclave_runner", features = ["sgxs"] }
# TODO: Change back to released version once upstream fix released.
enclave-runner = { git = "https://github.com/fortanix/rust-sgx", branch = "raoul/rte-418-fix_enclave_runner" }
# TODO: Change back to released version once upstream fix released.
sgxs-loaders = { git = "https://github.com/fortanix/rust-sgx", branch = "raoul/rte-418-fix_enclave_runner" }

[[bin]]
name = "oasis-core-runtime-loader"
path = "bin/main.rs"
