[package]
name = "oasis-core-runtime"
version = "0.0.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2018"

[dependencies]
cbor = { version = "0.5.1", package = "oasis-cbor", features = ["serde"] }

# Third party.
log = "0.4"
slog = "2.7.0"
slog-json = "2.6.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0.87", features = ["raw_value"] }
lazy_static = "1.3.0"
crossbeam = "0.8.2"
byteorder = "1.4.3"
anyhow = "1.0"
thiserror = "1.0"
sgx-isa = { version = "0.4.0", features = ["sgxstd"] }
dcap-ql = { version = "0.3.4", default-features = false, features = ["verify"] }
mbedtls = "0.8.1"
yasna = { version = "0.5.0", features = ["num-bigint"] }
bincode = "1.3.3"
snow = "0.9.0"
percent-encoding = "2.2.0"
chrono = "0.4.19"
base64 = "0.13.0"
rustc-hex = "2.0.1"
rand = "0.7.3"
futures = "0.3.25"
tokio = { version = "~1.24.1", features = ["rt", "sync"] }
tendermint = "0.29.0"
tendermint-proto = "0.29.0"
tendermint-light-client = { version = "0.29.0", features = ["rust-crypto"], default-features = false }
tendermint-rpc = { version = "0.29.0", default-features = false }
io-context = "0.2.0"
curve25519-dalek = "3.2.0"
x25519-dalek = "1.1.0"
ed25519-dalek = "1.0.1"
deoxysii = "0.2.4"
tiny-keccak = { version = "2.0.2", features = ["sha3", "tuple_hash"] }
sp800-185 = "0.2.0"
zeroize = "1.4"
intrusive-collections = "0.9.4"
sha2 = "0.9.9"
hmac = "0.11.0"
honggfuzz = "0.5.55"
arbitrary = { version = "1.2.0", features = ["derive"] }
num-bigint = "0.4"
num-traits = "0.2.15"
bech32 = "0.9.1"
impl-trait-for-tuples = "0.2.1"
x509-parser = "0.14.0"
oid-registry = "0.6.0"
rsa = "0.8.1"
base64-serde = "0.6.1"
lru = "0.9.0"

[target.'cfg(not(target_env = "sgx"))'.dependencies.tokio]
version = "1"
features = ["full"]

[dev-dependencies]
# For storage interoperability tests only.
jsonrpc = { version = "0.13.0", features = ["simple_uds"] }
tempfile = "3.3.0"
tendermint-testgen = "0.29.0"

[[bin]]
name = "fuzz-mkvs-proof"
path = "fuzz/mkvs_proof.rs"

[[bin]]
name = "fuzz-mkvs-node"
path = "fuzz/mkvs_node.rs"
