[package]
name = "oasis-core-runtime"
version = "0.0.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2018"

[dependencies]
cbor = { version = "0.5.1", package = "oasis-cbor", features = ["serde"] }

# Third party.
log = "0.4"
slog = "2.7.0"
slog-json = "2.6.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = { version = "1.0.125", features = ["raw_value"] }
lazy_static = "1.3.0"
crossbeam = "0.8.4"
byteorder = "1.4.3"
anyhow = "1.0"
thiserror = "1.0"
sgx-isa = { version = "0.4.1", features = ["sgxstd"] }
dcap-ql = { version = "0.4.0", default-features = false, features = ["verify"] }
mbedtls = { version = "0.12.3", features = ["x509"] }
yasna = { version = "0.5.0", features = ["num-bigint"] }
bincode = "1.3.3"
snow = "0.9.6"
percent-encoding = "2.2.0"
chrono = "0.4.19"
base64 = "0.22.1"
rustc-hex = "2.0.1"
rand = "0.8.5"
futures = "0.3.25"
tokio = { version = "1.39", features = ["rt", "rt-multi-thread", "sync", "time"] }
tokio-retry = "0.3.0"
tendermint = "0.39.1"
tendermint-proto = "0.39.1"
tendermint-light-client = { version = "0.39.1", features = ["rust-crypto"], default-features = false }
tendermint-rpc = { version = "0.39.1", default-features = false }
curve25519-dalek = { version = "4.1.3", features = ["legacy_compatibility"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
ed25519-dalek = { version = "2.0.0", features = ["rand_core", "digest"] }
deoxysii = "0.2.4"
tiny-keccak = { version = "2.0.2", features = ["sha3", "tuple_hash"] }
sp800-185 = "0.2.0"
zeroize = "1.7"
intrusive-collections = "0.9.4"
sha2 = { version = "0.10.7", features = ["oid"] }
hmac = "0.12.1"
honggfuzz = "0.5.55"
arbitrary = { version = "1.2.0", features = ["derive"] }
num-bigint = "0.4"
num-traits = "0.2.19"
bech32 = "0.11.0"
impl-trait-for-tuples = "0.2.1"
x509-parser = "0.16.0"
oid-registry = "0.7.0"
rsa = "0.9.6"
base64-serde = "0.7.0"
lru = "0.12.4"
async-trait = "0.1.77"
cfg-if = "1.0"

[target.'cfg(not(target_env = "sgx"))'.dependencies.tokio]
version = "1.39.2"
features = ["full"]

[dev-dependencies]
# For storage interoperability tests only.
jsonrpc = { version = "0.18.0", features = ["simple_uds"] }
tempfile = "3.12.0"
tendermint-testgen = "0.39.1"

[features]
default = []
# Enables debug-level logging in release builds.
debug-logging = ["slog/max_level_debug", "slog/release_max_level_debug"]
# Enables mock SGX in non-SGX builds.
debug-mock-sgx = []

[[bin]]
name = "fuzz-mkvs-proof"
path = "fuzz/mkvs_proof.rs"

[[bin]]
name = "fuzz-mkvs-node"
path = "fuzz/mkvs_node.rs"
