[package]
name = "oasis-core-runtime"
version = "0.0.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2018"

[dependencies]
cbor = { version = "0.5.1", package = "oasis-cbor", features = ["serde"] }

# Third party.
log = "0.4"
slog = "2.7.0"
slog-json = "2.6.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["raw_value"] }
lazy_static = "1.3.0"
crossbeam = "0.8.4"
byteorder = "1.4.3"
anyhow = "1.0"
thiserror = "2.0"
sgx-isa = { version = "0.4.1", features = ["sgxstd"] }
mbedtls = { version = "0.13.2", features = ["x509", "chrono"] }
yasna = { version = "0.5.0", features = ["num-bigint"] }
bincode = "2.0.1"
bitflags = "2.9.1"
snow = "0.9.6"
percent-encoding = "2.2.0"
chrono = "0.4.19"
base64 = "0.22.1"
rustc-hex = "2.0.1"
rand = "0.9.1"
futures = "0.3.31"
tokio = { version = "1.45", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-retry = "0.3.0"
tendermint = "0.40.3"
tendermint-proto = "0.40.3"
tendermint-light-client = { version = "0.40.3", features = [
    "rust-crypto",
], default-features = false }
tendermint-rpc = { version = "0.40.3", default-features = false }
curve25519-dalek = { version = "4.1.3", features = ["legacy_compatibility"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
ed25519-dalek = { version = "2.0.0", features = ["rand_core", "digest"] }
deoxysii = "0.2.4"
tiny-keccak = { version = "2.0.2", features = ["sha3", "tuple_hash"] }
sp800-185 = "0.2.0"
zeroize = "1.7"
intrusive-collections = "0.9.7"
sha2 = { version = "0.10.7", features = ["oid"] }
hmac = "0.12.1"
honggfuzz = "0.5.55"
arbitrary = { version = "1.2.0", features = ["derive"] }
num-bigint = "0.4"
num-traits = "0.2.19"
num-derive = "0.4.2"
bech32 = "0.11.0"
impl-trait-for-tuples = "0.2.1"
x509-parser = "0.17.0"
oid-registry = "0.8.1"
rsa = "0.9.6"
base64-serde = "0.8.0"
lru = "0.15.0"
async-trait = "0.1.83"
cfg-if = "1.0"

# TDX dependencies.
libc = { version = "0.2.174", optional = true }
nix = { version = "0.30.1", features = ["mount", "signal"], optional = true }
vsock = { version = "0.5.1", optional = true }

[target.'cfg(not(target_env = "sgx"))'.dependencies.tokio]
version = "1.45.1"
features = ["full"]

[dev-dependencies]
# For storage interoperability tests only.
jsonrpc = { version = "0.18.0", features = ["simple_uds"] }
tempfile = "3.20.0"
tendermint-testgen = "0.40.3"

[features]
default = []
# Enables build for TDX.
tdx = ["dep:vsock", "dep:libc", "dep:nix"]
# Enables debug-level logging in release builds.
debug-logging = ["slog/max_level_debug", "slog/release_max_level_debug"]
# Enables mock SGX in non-SGX builds.
debug-mock-sgx = []

[[bin]]
name = "fuzz-mkvs-proof"
path = "fuzz/mkvs_proof.rs"

[[bin]]
name = "fuzz-mkvs-node"
path = "fuzz/mkvs_node.rs"

[[bin]]
name = "fuzz-sgx-pcs-quote"
path = "fuzz/sgx_pcs_quote.rs"
