[package]
name = "secret-sharing"
version = "0.1.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2018"

[dependencies]

# Third party.
anyhow = "1.0"
group = "0.13.0"
p384 = { version = "0.13.0" }
rand_core = "0.6.4"

# Fuzzing.
honggfuzz = "0.5.55"
rand = "0.8.5"

[[bin]]
name = "fuzz-vss"
path = "src/vss/fuzz/main.rs"
