[package]
name = "secret-sharing"
version = "0.1.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2018"

[dependencies]
anyhow = { version = "1.0" }
group = { version = "0.13", default-features = false }
honggfuzz = { version = "0.5" }
p384 = { version = "0.13", default-features = false, features = [
    "std",
    "hash2curve",
] }
rand = { version = "0.9" }
rand_core = { version = "0.9" }
sha3 = { version = "0.10" }
subtle = { version = "2.6", default-features = false }
thiserror = { version = "2.0" }
zeroize = { version = "1.7" }

[[bin]]
name = "fuzz-vss"
path = "src/vss/fuzz/main.rs"
